# lic

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  clippy.yml  test.yml
src/: cli.rs  main.rs
src/manifest/: base.rs  mod.rs  nodejs.rs  python.rs  rust.rs
src/spdx/: details.rs  list.rs
