[package]
name = "lic"
version = "0.4.0"
edition = "2021"
authors = ["Nyakku Shigure <sigure.qaq@gmail.com>"]
rust-version = "1.74.0"
description = "A SPDX license generator."
license = "MIT"
homepage = "https://github.com/ShigureLab/lic"
repository = "https://github.com/ShigureLab/lic"
readme = "README.md"
keywords = ["spdx", "license", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
colored = "2.1.0"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
strsim = "0.11.0"
textwrap = "0.16.0"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"
